# dvergr

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  build_local.sh  compose.yml  manifest.yaml
.github/workflows/: docker-publish.yml  minecraft-docker-image.yml
config/: ops.json
grafana/: grafana.ini
image/: Dockerfile  docker-entrypoint.sh  opentelemetry.properties  sentry.properties  server.properties
k8s/: cfg-minecraft-1.yaml  cfg-minecraft-2.yaml  loki.yaml  otel_collector.yaml  podinfo.yaml  sts-minecraft.yaml  svc-minecraft-sts.yaml  svc-minecraft.yaml
k8s/minecraft/: values.yaml
loki/: loki.yaml
minecraft/: .dockerignore  Dockerfile  Modrinth.toml  datapacks.txt  docker-entrypoint.sh  healthcheck.sh  log4j2-build.xml  log4j2.xml  modrinth.py  modrinth.sh  mods.txt  opentelemetry.properties  ops.json  server.properties
minecraft-config/: log4j2.xml  server.properties
minecraft-image/: Dockerfile  config.tgz  mods.tgz  quilt-server-launcher.properties
minecraft-image/config/: dimdoors-config.json5  quilt-loader.txt
minecraft/config/: AdvancedBackups.properties
minecraft/mod-config/: AdvancedBackups.properties  DistantHorizons.toml  (+25 more)
minecraft/modrinth/: Cargo.toml
minecraft/modrinth/src/: business_logic.rs
minecraft/modrinth/src/modrinth/: api.rs
minecraft/modrinth/tests/: modrinth_staging_api.rs
mounts/: log4j2.xml  opentelemetry.properties  ops.json  server.properties  whitelist.json
nginx/: nginx.conf
otel/: otel-collector.yaml
prometheus/: prometheus.yaml
tempo/: tempo.yaml
(+58 files in other folders)
